--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,8 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha9'
     compile 'com.android.support:design:25.3.1'
     testCompile 'junit:junit:4.12'
-    annotationProcessor 'com.alibaba:arouter-compiler:1.1.0'
+    annotationProcessor 'com.alibaba:arouter-compiler:1.1.1'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.10'
     compile project(path: ':common')
     compile project(path: ':index')
 }
