--- a/common/build.gradle
+++ b/common/build.gradle
@@ -34,20 +34,27 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+//    基础库
     compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support:support-v4:25.3.1'
     testCompile 'junit:junit:4.12'
     compile 'com.squareup.retrofit2:retrofit:2.2.0'
     compile 'com.squareup.okhttp3:okhttp:3.6.0'
     compile 'com.google.code.gson:gson:2.8.0'
-    compile 'com.jakewharton:butterknife:8.5.1'
     compile 'com.squareup.retrofit2:converter-gson:2.2.0'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.2.0'
-    compile 'com.google.dagger:dagger:2.10'
     compile 'io.reactivex:rxandroid:1.2.1'
-    compile 'com.alibaba:arouter-api:1.2.0'
-    annotationProcessor 'com.alibaba:arouter-compiler:1.1.0'
+//    依赖注入
+    provided 'javax.annotation:jsr250-api:1.0'
+    compile 'com.google.dagger:dagger:2.10'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.10'
+//    ARouter
+    compile 'com.alibaba:arouter-api:1.2.0.1'
+    annotationProcessor 'com.alibaba:arouter-compiler:1.1.1'
+//    沉浸状态栏
     compile 'com.jaeger.statusbaruitl:library:1.3.6'
 //    activity滑动关闭
-    compile 'com.android.support:support-v4:25.3.1'
     compile 'cn.bingoogolapple:bga-swipebacklayout:1.0.8@aar'
+    //加载动画
+    compile 'com.wang.avi:library:2.1.3'
 }
