--- a/index/build.gradle
+++ b/index/build.gradle
@@ -39,5 +39,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.1'
     testCompile 'junit:junit:4.12'
     compile project(path: ':common')
-    annotationProcessor 'com.alibaba:arouter-compiler:1.1.0'
+    annotationProcessor 'com.alibaba:arouter-compiler:1.1.1'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.10'
 }
