--- a/index/src/main/AndroidManifest.xml
+++ b/index/src/main/AndroidManifest.xml
@@ -8,7 +8,18 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".view.impl.LoginActivity" />
-        <activity android:name=".view.impl.CodeActivity" />
+        <activity
+            android:name=".view.impl.CodeActivity"
+            android:theme="@style/AppTheme.Transparent" />
+        <activity
+            android:name=".view.impl.RegisterActivity"
+            android:theme="@style/AppTheme.Transparent" />
+        <activity
+            android:name=".view.impl.RegisterByEntActivity"
+            android:theme="@style/AppTheme.Transparent" />
+        <activity
+            android:name=".view.impl.RegisterByUserActivity"
+            android:theme="@style/AppTheme.Transparent" />
     </application>
 
 </manifest>
