--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.application'
-
+apply plugin: 'com.jakewharton.butterknife'
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
@@ -39,8 +39,10 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha9'
     compile 'com.android.support:design:25.3.1'
     testCompile 'junit:junit:4.12'
-    annotationProcessor 'com.alibaba:arouter-compiler:1.1.1'
+    annotationProcessor 'com.alibaba:arouter-compiler:1.1.1.1'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.10'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
     compile project(path: ':common')
     compile project(path: ':index')
+    compile project(path: ':service')
 }
