--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply plugin: 'com.jakewharton.butterknife'
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
@@ -26,7 +27,6 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_7
         targetCompatibility JavaVersion.VERSION_1_7
     }
-
 }
 
 dependencies {
@@ -45,16 +45,27 @@ dependencies {
     compile 'com.squareup.retrofit2:adapter-rxjava:2.2.0'
     compile 'io.reactivex:rxandroid:1.2.1'
 //    依赖注入
+    compile 'com.jakewharton:butterknife:8.5.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
     provided 'javax.annotation:jsr250-api:1.0'
     compile 'com.google.dagger:dagger:2.10'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.10'
 //    ARouter
-    compile 'com.alibaba:arouter-api:1.2.0.1'
-    annotationProcessor 'com.alibaba:arouter-compiler:1.1.1'
+    compile 'com.alibaba:arouter-api:1.2.0.3'
+    annotationProcessor 'com.alibaba:arouter-compiler:1.1.1.1'
 //    沉浸状态栏
     compile 'com.jaeger.statusbaruitl:library:1.3.6'
 //    activity滑动关闭
     compile 'cn.bingoogolapple:bga-swipebacklayout:1.0.8@aar'
     //加载动画
     compile 'com.wang.avi:library:2.1.3'
+//    底部导航栏
+    compile 'com.jpeng:JPTabBar:1.2.3'
+//    广告轮播动画
+    compile 'com.xhb:xbanner:1.2.7'
+    compile 'com.nineoldandroids:library:2.4.0'
+//    图片加载技术
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+//    BaseRecyclerViewAdapterHelper RecyclerView的adapter封装
+    compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.12'
 }
