hejian update 气象实况连接

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,5 @@ dependencies {
     compile project(path: ':index')
     compile project(path: ':service')
     compile project(path: ':manage')
+    compile project(path: ':serverproduct')
 }
