--- a/serviceproduct/src/main/AndroidManifest.xml
+++ b/serviceproduct/src/main/AndroidManifest.xml
@@ -1,12 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 
-    package="com.erayic.agr.serverproduct">
+    package="com.erayic.motionsnesor.serviceproduct">
 
     <application android:allowBackup="true" android:label="@string/app_name"
         android:supportsRtl="true">
-        <activity
-            android:name=".view.impl.ReportingActivity"
-            android:theme="@style/AppTheme.Transparent" />
+
     </application>
 
 </manifest>
