--- a/unit/build.gradle
+++ b/unit/build.gradle
@@ -1,20 +1,23 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 apply plugin: 'com.jakewharton.butterknife'
+
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
+
     defaultConfig {
-        applicationId "com.erayic.agr"
         minSdkVersion 18
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
+
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         javaCompileOptions {
             annotationProcessorOptions {
                 arguments = [moduleName: project.getName()]
             }
         }
+
     }
     buildTypes {
         release {
@@ -22,13 +25,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_7
         targetCompatibility JavaVersion.VERSION_1_7
     }
 }
-
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
@@ -36,15 +37,8 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha9'
-    compile 'com.android.support:design:25.3.1'
     testCompile 'junit:junit:4.12'
+    compile project(path: ':common')
     annotationProcessor 'com.alibaba:arouter-compiler:1.1.2'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
-    compile project(path: ':common')
-    compile project(path: ':index')
-    compile project(path: ':service')
-    compile project(path: ':manage')
-    compile project(path: ':serverproduct')
-    compile project(path: ':unit')
 }
