--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':common', ':index', ':service', ':manage', ':serverproduct'
+include ':app', ':common', ':index', ':service', ':manage', ':serverproduct', ':unit'
