--- a/common/build.gradle
+++ b/common/build.gradle
@@ -74,5 +74,5 @@ dependencies {
 //    EventBus
     compile 'org.greenrobot:eventbus:3.0.0'
 //    日期选择（https://github.com/codbking/PickTime）
-    compile 'com.github.codbking:PickTime:v1.0.1'
+//    compile 'com.github.codbking:PickTime:v1.0.1'
 }
