--- a/unit/src/main/AndroidManifest.xml
+++ b/unit/src/main/AndroidManifest.xml
@@ -4,7 +4,9 @@
 
     <application android:allowBackup="true" android:label="@string/app_name"
         android:supportsRtl="true">
-
+        <activity
+            android:name=".view.impl.AddBatchActivity"
+            android:theme="@style/AppTheme.Transparent" />
     </application>
 
 </manifest>
