--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,5 @@ dependencies {
     compile project(path: ':manage')
     compile project(path: ':serverproduct')
     compile project(path: ':unit')
+    compile project(path: ':jobs')
 }
