--- a/serverproduct/src/main/AndroidManifest.xml
+++ b/serverproduct/src/main/AndroidManifest.xml
@@ -22,6 +22,12 @@
         <activity
             android:name=".view.impl.DynamicPriceDetailActivity"
             android:theme="@style/AppTheme.Transparent" />
+        <activity
+            android:name=".view.impl.AgriculturalInfoActivity"
+            android:theme="@style/AppTheme.Transparent" />
+        <activity
+            android:name=".view.impl.AgriculturalInfoDetailActivity"
+            android:theme="@style/AppTheme.Transparent" />
     </application>
 
 </manifest>
