--- a/unit/src/main/AndroidManifest.xml
+++ b/unit/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true">
         <activity
-            android:name=".view.impl.AddBatchActivity"
+            android:name=".view.impl.AddUpdateBatchActivity"
             android:theme="@style/AppTheme.Transparent" />
         <activity
             android:name=".view.impl.BatchInfoActivity"
@@ -23,6 +23,9 @@
             android:theme="@style/AppTheme.Transparent" />
         <activity
             android:name=".view.impl.AddLogActivity"
+            android:theme="@style/AppTheme.Transparent" />
+        <activity
+            android:name=".view.impl.HistoryBatchListActivity"
             android:theme="@style/AppTheme.Transparent" />
         <activity
             android:name=".view.impl.BatchDahuaVideoActivity"
